Fix initiative tracker being too small on scren

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -154,7 +154,7 @@
 	display:flex;
 	justify-content: center;
 	align-items: flex-end;
-	color:rgba(70,40,40,1);
+	color:rgba(255,255,255);
 	
 }
 .emoji.play{
@@ -402,13 +402,14 @@
 	justify-content:space-around;
 	align-items:flex-end;
 	text-align: center;
+	padding:1vh;
 	transition:top 2s;
   }
   div#initiative--order h3{
 	flex: 1 0 50%;
 	font-size:100%;
 	color:rgba(245,245,245,1);
-	transition:opacity 2s;
+	transition:opacity 1s;
 	opacity: 1;
   }
   div#initiative--order h3.hide{
